[gd_scene load_steps=5 format=2]

[ext_resource path="res://addons/VitaLauncher/Launcher.gd" type="Script" id=1]
[ext_resource path="res://addons/VitaLauncher/VitaIPDialog.gd" type="Script" id=2]
[ext_resource path="res://addons/VitaLauncher/ProgressDialog.gd" type="Script" id=3]

[sub_resource type="StyleBoxFlat" id=1]
content_margin_left = 10.0
content_margin_right = 10.0
content_margin_top = 0.0
content_margin_bottom = 0.0
bg_color = Color( 1, 1, 1, 0.109804 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
anti_aliasing_size = 1.851

[node name="VitaLauncher" type="PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )
script = ExtResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 10.0
margin_right = 1910.0
margin_bottom = 1080.0

[node name="Icon" type="TextureRect" parent="HBoxContainer"]
margin_right = 1868.0
margin_bottom = 1080.0
size_flags_horizontal = 3
size_flags_vertical = 3
stretch_mode = 6

[node name="LaunchButton" type="ToolButton" parent="HBoxContainer"]
modulate = Color( 100, 100, 100, 1 )
margin_left = 1872.0
margin_right = 1884.0
margin_bottom = 1080.0
hint_tooltip = "Launch on Vita"

[node name="LoggingButton" type="ToolButton" parent="HBoxContainer"]
modulate = Color( 100, 100, 100, 1 )
margin_left = 1888.0
margin_right = 1900.0
margin_bottom = 1080.0
hint_tooltip = "Toggle logging server"

[node name="VitaIPDialog" type="ConfirmationDialog" parent="."]
margin_left = 10.0
margin_right = 1910.0
margin_bottom = 1080.0
window_title = "Vita IP address"
script = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="VitaIPDialog"]
margin_left = 8.0
margin_top = 8.0
margin_right = 1892.0
margin_bottom = 1044.0

[node name="LineEdit" type="LineEdit" parent="VitaIPDialog/VBoxContainer"]
margin_right = 1884.0
margin_bottom = 24.0
size_flags_vertical = 5

[node name="Spacer" type="Control" parent="VitaIPDialog/VBoxContainer"]
margin_top = 28.0
margin_right = 1884.0
margin_bottom = 1008.0
size_flags_vertical = 3

[node name="CheckBox" type="CheckBox" parent="VitaIPDialog/VBoxContainer"]
margin_top = 1012.0
margin_right = 1884.0
margin_bottom = 1036.0
pressed = true
text = "Remember"

[node name="ProgressDialog" type="PopupDialog" parent="."]
margin_left = 10.0
margin_right = 1910.0
margin_bottom = 1080.0
popup_exclusive = true
script = ExtResource( 3 )

[node name="MarginContainer" type="MarginContainer" parent="ProgressDialog"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 15
custom_constants/margin_left = 15
custom_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="ProgressDialog/MarginContainer"]
margin_left = 15.0
margin_right = 1885.0
margin_bottom = 1065.0

[node name="TitleLabel" type="Label" parent="ProgressDialog/MarginContainer/VBoxContainer"]
margin_right = 1870.0
margin_bottom = 14.0
text = "Exporting for Vita"
align = 1

[node name="Spacer" type="Control" parent="ProgressDialog/MarginContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 1870.0
margin_bottom = 1029.0
size_flags_vertical = 3

[node name="ProgressBar" type="ProgressBar" parent="ProgressDialog/MarginContainer/VBoxContainer"]
margin_top = 1033.0
margin_right = 1870.0
margin_bottom = 1047.0
max_value = 1.0
value = 0.5

[node name="ProgressLabel" type="Label" parent="ProgressDialog/MarginContainer/VBoxContainer"]
margin_top = 1051.0
margin_right = 1870.0
margin_bottom = 1065.0
text = "Current Step"

[node name="Tween" type="Tween" parent="ProgressDialog"]

[node name="NotificationDialog" type="AcceptDialog" parent="."]
margin_right = 83.0
margin_bottom = 58.0

[connection signal="about_to_show" from="VitaIPDialog" to="VitaIPDialog" method="onAboutToShow"]
[connection signal="confirmed" from="VitaIPDialog" to="VitaIPDialog" method="onConfirmed"]
[connection signal="popup_hide" from="VitaIPDialog" to="VitaIPDialog" method="onHide"]
[connection signal="text_entered" from="VitaIPDialog/VBoxContainer/LineEdit" to="VitaIPDialog" method="onTextEntered"]
[connection signal="about_to_show" from="ProgressDialog" to="ProgressDialog" method="onAboutToShow"]
